# HaskellProject

./: README.md
Compiler/: Compiler.cabal  stack.yaml
Compiler/.stack-work/install/x86_64-osx/nightly-2017-01-10/8.0.1/flag-cache/: Compiler-0.1.0.0-57coiQcmnJXARK4xYqZ5Rd  Compiler-0.1.0.0-5zpykiNfomWL9fkJ0glyLp  Compiler-0.1.0.0-A5AqcFYQOeY4hOCoTusz4T  GenericPretty-1.2.1-FqlYg3LhEVa3kMV6nPdaDK  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-4RIYnAHyOmg6Dh17ENWi43  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  clock-0.7.2-1F3tpzhSilhF4wqwyRWqgE  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  extra-1.5.1-8IZGc0qjcAMDNCmnY75fvc  fsnotify-0.2.1-CVmm5Xm7TKeFvZGmZ2FEgl  ghcid-0.6.6-HoNEfPDv3ajLm6T2iI46q0  hfsevents-0.1.6-76hIQOuT2kI2HYDKzpdSFI  integer-logarithms-1-E6LvTbkhTkGIa6wPB3rtJw  scientific-0.3.4.10-2Y658Wts4fDGgAkWhKOJwC  terminal-size-0.3.2.1-LpkVHWZKZXdLX20uKh4q0i  unix-compat-0.4.3.1-GamCWWfiT0318wIeUlpE1K
Compiler/.stack-work/install/x86_64-osx/nightly-2017-01-10/8.0.1/lib/x86_64-osx-ghc-8.0.1/Compiler-0.1.0.0-57coiQcmnJXARK4xYqZ5Rd/: AST.dyn_hi  AST.hi  Argument.dyn_hi  Argument.hi  Interpreter.dyn_hi  Lexical.dyn_hi  Lexical.hi  (+4 more)
Compiler/.stack-work/install/x86_64-osx/nightly-2017-01-10/8.0.1/pkgdb/: Compiler-0.1.0.0-57coiQcmnJXARK4xYqZ5Rd.conf  Compiler-0.1.0.0-5UkU68CXfZM1FpQsH03UZ5.conf  Compiler-0.1.0.0-5zpykiNfomWL9fkJ0glyLp.conf  Compiler-0.1.0.0-A5AqcFYQOeY4hOCoTusz4T.conf  package.cache
Compiler/app/: Main.hs
Compiler/src/: AST.hs  Argument.hs  Grammar.hs  Grammer.hs  Interpreter.hs  Lexical.hs  PrettyPrinter.hs  ProjTest.hs  Repl.hs
Compiler/test/: Spec.hs
(+20 files in other folders)
