name:                Compiler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/szp14/HaskellProject
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Repl
                       Grammer
                       Argument
                       Interpreter
                       PrettyPrinter
  build-depends:       base >= 4.7 && < 5
                       ,text
                       ,attoparsec
                       , pretty
                       , GenericPretty
                       , mtl
                       , containers
                       , vector
  default-language:    Haskell2010

executable compiler
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Compiler
                     , text
                     , attoparsec
                     , pretty
                     , GenericPretty
                     , mtl
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/szp14/HaskellProject
